# telegram-llm-kit

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
telegram_llm_kit/: config.py  main.py
telegram_llm_kit/bot/: app.py  handlers.py
telegram_llm_kit/llm/: base.py  claude.py  deepseek.py  factory.py
telegram_llm_kit/prompts/: context.py  system.py
telegram_llm_kit/rag/: embeddings.py  retriever.py  store.py
telegram_llm_kit/storage/: database.py  llm_call_repo.py  message_repo.py  models.py
tests/: conftest.py  test_config.py  test_context.py  test_database.py  test_embeddings.py  test_handlers.py  test_integration.py  test_llm_base.py  test_llm_call_repo.py  test_llm_claude.py  test_llm_deepseek.py  test_llm_factory.py  test_message_repo.py  test_rag_store.py  test_retriever.py
